# CodeLeveler

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  README.zh-CN.md  SECURITY.md  clippy.toml  deny.toml  install.sh  rustfmt.toml
crates/leveler-agent/: Cargo.toml
crates/leveler-agent/prompts/: base.md
crates/leveler-agent/src/: authorization.rs  budget.rs  compaction.rs  executor.rs  injected_tools.rs  lib.rs  nudges.rs  prompt.rs  sub_agent.rs
crates/leveler-agent/src/executor/: closeout.rs  dispatch.rs  drive.rs  handlers.rs  stream.rs
crates/leveler-agent/tests/: loop_test.rs  multi_agent_test.rs
crates/leveler-app/: Cargo.toml
crates/leveler-app/examples/: tui_smoke.rs
crates/leveler-app/src/: active_turns.rs  doctor.rs  event_bridge.rs  global_config.rs  interactive.rs  lib.rs  mcp_config.rs  orchestrate.rs  parallel.rs  prompt_bridge.rs  session.rs  vcs.rs  workspace_view.rs
crates/leveler-app/tests/: command_delivery.rs  direct_verification.rs  interactive_errors.rs  session_axes_resume.rs  tui_path_soak.rs  zombie_turns.rs
crates/leveler-cli/: Cargo.toml
crates/leveler-cli/src/: approver.rs  cli.rs  common.rs  eval_cmd.rs  eval_signals.rs  info_cmds.rs  init_cmd.rs  main.rs  mcp_lsp_cmds.rs  memory_cmds.rs  output.rs  permissions_cmds.rs  render.rs  run_cmds.rs  sessions_cmd.rs  upgrade_cmd.rs
crates/leveler-cli/tests/: eval_smoke_offline.rs  permissions.rs
crates/leveler-client-protocol/: Cargo.toml
crates/leveler-client-protocol/src/: approval.rs  client.rs  command.rs  command_envelope.rs  event.rs  lib.rs  media.rs  mock.rs  progress.rs  snapshot.rs  version.rs  wire_types.rs
crates/leveler-context/: Cargo.toml
crates/leveler-context/src/: context.rs  guard.rs  lib.rs  repo_map.rs  rules.rs  symbols.rs
crates/leveler-core/: Cargo.toml
crates/leveler-core/src/: budget.rs  environment.rs  ids.rs  lib.rs  text.rs  time.rs
crates/leveler-engine/: Cargo.toml
crates/leveler-engine/src/: baseline.rs  engine.rs  event.rs  factory.rs  lib.rs  log.rs  policy_resolver.rs  reaper.rs  recorders.rs  turn.rs
crates/leveler-engine/tests/: crash_recovery_test.rs  direct_test.rs  multi_turn_session_test.rs  plan_test.rs  remote_readiness.rs
crates/leveler-eval/: Cargo.toml
crates/leveler-eval/src/: lib.rs
crates/leveler-execution/: Cargo.toml
crates/leveler-execution/src/: approval.rs  artifact.rs  background.rs  checkpoint.rs  command.rs  hooks.rs  lib.rs  permission_grants.rs  permission_rules.rs  risk.rs  seatbelt_base.sbpl  seatbelt_network.sbpl  shell_ast.rs  snapshot.rs  windows_acl.rs  windows_appcontainer.rs  windows_sandbox.rs  workspace.rs
crates/leveler-execution/src/command/: host_cache.rs
crates/leveler-execution/tests/: classify_adversarial.rs  env_scrub.rs  snapshot_env_scrub.rs
crates/leveler-lifecycle/: Cargo.toml
crates/leveler-lifecycle/src/: axes.rs  contract.rs  impact.rs  ledger.rs  lib.rs  objective.rs  plan.rs  progress.rs  readiness.rs
crates/leveler-local-transport/: Cargo.toml
crates/leveler-local-transport/src/: lib.rs
crates/leveler-lsp/: Cargo.toml
crates/leveler-lsp/src/: client.rs  codec.rs  lib.rs  registry.rs
crates/leveler-lsp/tests/: lsp_test.rs
crates/leveler-media/: Cargo.toml
crates/leveler-media/src/: lib.rs
crates/leveler-memory/: Cargo.toml
crates/leveler-memory/src/: lib.rs
crates/leveler-model/: Cargo.toml
crates/leveler-model/src/: error.rs  event.rs  lib.rs  message.rs  middleware.rs  profile.rs  protocol.rs  request.rs  response.rs  runtime.rs  tool_catalog.rs
crates/leveler-orchestrator/: Cargo.toml
crates/leveler-orchestrator/src/: discuss.rs  error.rs  graph.rs  json.rs  lib.rs  orchestrator.rs  planner.rs  requirement.rs  review.rs  roles.rs  state.rs
crates/leveler-orchestrator/tests/: discuss_test.rs  pipeline_test.rs
crates/leveler-project/: Cargo.toml
crates/leveler-project/src/: config.rs  detect.rs  layout.rs  lib.rs
crates/leveler-protocol/: Cargo.toml
crates/leveler-protocol/src/: lib.rs  sse.rs
crates/leveler-protocol/src/anthropic_messages/: mod.rs  stream.rs  wire.rs
crates/leveler-provider/: Cargo.toml
crates/leveler-provider/src/: catalog.rs  config.rs  lib.rs  probe.rs  registry.rs  transport.rs
crates/leveler-provider/tests/: integration.rs
crates/leveler-skills/: Cargo.toml
crates/leveler-skills/src/: lib.rs
crates/leveler-storage/: Cargo.toml
crates/leveler-storage/src/: command_receipt_repo.rs  database.rs  event_repo.rs  event_store.rs  lib.rs  message_repo.rs  model_request_repo.rs  session_repo.rs  terminal_repo.rs  turn_repo.rs
crates/leveler-test-support/: Cargo.toml
crates/leveler-test-support/src/: lib.rs  mock_server.rs
crates/leveler-tools/: Cargo.toml
crates/leveler-tools/src/: lib.rs  mcp.rs  recoverable.rs  registry.rs  tool.rs
crates/leveler-tools/src/tools/: git.rs  (+29 more)
crates/leveler-tools/tests/: find_symbol_lsp.rs  mcp_env_scrub.rs  mcp_live.rs
crates/leveler-tui/: Cargo.toml
crates/leveler-tui/src/: action.rs  activity_stream.rs  code_block.rs  composer.rs  diff_view.rs  footer_queue.rs  i18n.rs  inline.rs  lib.rs  markdown.rs  plan_cell.rs  run.rs  screen.rs  selection.rs  splash.rs  state.rs  status_line.rs  terminal.rs  theme.rs  theme_config.rs  tool_cell.rs  tool_result.rs  tool_taxonomy.rs  transcript.rs  workbench.rs
crates/leveler-tui/tests/: composer.rs  mock_client.rs  reducer.rs  snapshots.rs  tui_session_e2e.rs  visual_dump.rs
crates/leveler-vcs/: Cargo.toml
crates/leveler-vcs/src/: lib.rs  parallel.rs  workflow.rs
crates/leveler-verifier/: Cargo.toml
crates/leveler-verifier/src/: acceptance.rs  discover.rs  failure.rs  lib.rs  outcome.rs  plan.rs  report.rs  test_results.rs  verifier.rs
crates/leveler-web/: Cargo.toml  README.md
crates/leveler-web/design/: mockup.html
crates/leveler-web/src/: auth.rs  browse.rs  lib.rs  projects.rs  protocol.rs  repo.rs  router.rs  server.rs  ws.rs
crates/leveler-web/tests/: server.rs
crates/leveler-web/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+150 files in other folders)
