[package]
name = "leveler-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Composition root: config loading, registry assembly, database, doctor checks."

[dependencies]
leveler-core = { workspace = true }
leveler-model = { workspace = true }
leveler-provider = { workspace = true }
leveler-storage = { workspace = true }
leveler-project = { workspace = true }
leveler-execution = { workspace = true }
leveler-lifecycle = { workspace = true }
leveler-memory = { workspace = true }
leveler-tools = { workspace = true }
leveler-agent = { workspace = true }
leveler-verifier = { workspace = true }
leveler-vcs = { workspace = true }
leveler-orchestrator = { workspace = true }
leveler-engine = { workspace = true }
leveler-context = { workspace = true }
leveler-client-protocol = { workspace = true }
leveler-local-transport = { workspace = true }
leveler-media = { workspace = true }
arboard = "3"
serde = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
leveler-test-support = { workspace = true }
tempfile = "3"
