[package]
name = "leveler-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Context compiler: repository map, candidate selection, rules, token budget."

[dependencies]
leveler-core = { workspace = true }
leveler-project = { workspace = true }
leveler-skills = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
