[package]
name = "leveler-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Workspace path safety, risk levels, and process execution."

[dependencies]
sha2 = { workspace = true }
leveler-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
cap-std = { workspace = true }
# Shell-script danger classification parses bash with a real grammar instead of
# string splitting. Pinned exactly: grammar and runtime ABI must stay in sync.
tree-sitter = "=0.25.10"
tree-sitter-bash = "=0.25.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "user"] }
rustix = { workspace = true }

# Job Object + AppContainer via audited safe wrappers (no in-crate unsafe).
[target.'cfg(windows)'.dependencies]
process-wrap = { version = "8.2", default-features = false, features = [
    "tokio1",
    "job-object",
    "kill-on-drop",
] }
rappct = { version = "0.13", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
