[package]
name = "leveler-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Project-scoped durable synthetic memory: approve-gated write, BM25 search, archive-on-forget."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tempfile = "3"

[dev-dependencies]
