[package]
name = "leveler-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provider config, HTTP transport, registry, retry and the ModelRuntime implementation."

[dependencies]
leveler-core = { workspace = true }
leveler-model = { workspace = true }
leveler-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
leveler-test-support = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
